--- a/XPOS/XPOS_FE/Views/Category/Delete.cshtml
+++ b/XPOS/XPOS_FE/Views/Category/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <form asp-action="SureDelete">
     <input type="hidden" value="@Model.Id" name="Id" id="Id"/>
-    <a asp-action="Index" asp-controller="Category" class="btn btn-light"></a>
+    <a class="btn btn-outline-dark" asp-controller="Category" asp-action="Index">Back</a>
     <button class="btn btn-danger">Sure</button>
 
 </form>
