--- a/XPOS/XPOS_FE/Views/Variant/Detail.cshtml
+++ b/XPOS/XPOS_FE/Views/Variant/Detail.cshtml
@@ -32,4 +32,4 @@
     <input type="text" class="form-control" id="UpdateDate" value="@Model.UpdateDate" readonly>
 </div>
 
-<a class="btn btn-primary" asp-controller="Category" asp-action="Index">Back</a>
+<a class="btn btn-outline-dark" asp-controller="Variant" asp-action="Index">Back</a>
