--- a/XPOS/XPOS_FE/Views/Category/Edit.cshtml
+++ b/XPOS/XPOS_FE/Views/Category/Edit.cshtml
@@ -12,4 +12,5 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Edit</button>
+    <a class="btn btn-outline-dark" asp-controller="Category" asp-action="Index">Back</a>
 </form>
