--- a/XPOS/XPOS_FE/Views/Category/Detail.cshtml
+++ b/XPOS/XPOS_FE/Views/Category/Detail.cshtml
@@ -1,28 +1,32 @@
 ﻿@using XPOS_API.Models
 @model TblCategory
-<div class="mb-3" style="width: 500px;">
-  <label for="NameCategory" class="form-label">Name Category</label>
-  <input type="text" class="form-control" id="NameCategory" value="@Model.NameCategory" readonly>
-</div>
-<div class="mb-3" style="width: 500px">
-  <label for="Description" class="form-label">Description</label>
-  <textarea class="form-control" id="Description" rows="3" readonly>@Model.Description</textarea>
-</div>
-<div class="mb-3" style="width: 500px;">
-    <label for="CreateBy" class="form-label">Create By</label>
-    <input type="text" class="form-control" id="CreateBy" value="@Model.CreateBy" readonly>
-</div>
-<div class="mb-3" style="width: 500px;">
-    <label for="CreateDate" class="form-label">Create Date</label>
-    <input type="text" class="form-control" id="CreateDate" value="@Model.CreateDate" readonly>
-</div>
-<div class="mb-3" style="width: 500px;">
-    <label for="UpdateBy" class="form-label">Update By</label>
-    <input type="text" class="form-control" id="UpdateBy" value="@Model.UpdateBy" placeholder="">
-</div>
-<div class="mb-3" style="width: 500px;">
-    <label for="UpdateDate" class="form-label">Update Date</label>
-    <input type="text" class="form-control" id="UpdateDate" value="@Model.UpdateDate" readonly>
-</div>
 
-<a class="btn btn-outline-dark" asp-controller="Category" asp-action="Index">Back</a>
+<div class="card">
+
+    <div class="mb-3">
+        <label for="NameCategory" class="form-label">Name Category</label>
+        <input type="text" class="form-control" id="NameCategory" value="@Model.NameCategory" readonly>
+    </div>
+    <div class="mb-3">
+        <label for="Description" class="form-label">Description</label>
+        <textarea class="form-control" id="Description" rows="3" readonly>@Model.Description</textarea>
+    </div>
+    <div class="mb-3" ">
+        <label for="CreateBy" class="form-label">Create By</label>
+        <input type="text" class="form-control" id="CreateBy" value="@Model.CreateBy" readonly>
+    </div>
+    <div class="mb-3">
+        <label for="CreateDate" class="form-label">Create Date</label>
+        <input type="text" class="form-control" id="CreateDate" value="@Model.CreateDate" readonly>
+    </div>
+    <div class="mb-3">
+        <label for="UpdateBy" class="form-label">Update By</label>
+        <input type="text" class="form-control" id="UpdateBy" value="@Model.UpdateBy" placeholder="">
+    </div>
+    <div class="mb-3">
+        <label for="UpdateDate" class="form-label">Update Date</label>
+        <input type="text" class="form-control" id="UpdateDate" value="@Model.UpdateDate" readonly>
+    </div>
+
+</div>
+<button data-dismiss="modal" class="btn btn-primary">Back</button>
