--- a/XPOS/XPOS_FE/Views/Variant/Edit.cshtml
+++ b/XPOS/XPOS_FE/Views/Variant/Edit.cshtml
@@ -2,21 +2,27 @@
 @using XPOS_ViewModels;
 @model VMVariant;
 
-<form asp-action="Edit" method="post">
-    <div class="mb-3" style="width: 500px;">
-        <label for="IdCategory" class="form-label">Id Category</label>
-        @Html.DropDownListFor(a => a.IdCategory, new SelectList(ViewBag.ListCategory, "Id", "NameCategory"), new {@class="form-control"})
-@*        <input type="text" class="form-control" id="IdCategory" name="IdCategory" value="@Model.IdCategory">
-*@    </div>
-    <div class="mb-3" style="width: 500px;">
-        <label for="NameVariant" class="form-label">Name Variant</label>
-        <input type="text" class="form-control" id="NameVariant" name="NameVariant" value="@Model.NameVariant">
-    </div>
-    <div class="mb-3" style="width: 500px">
-        <label for="Description" class="form-label">Description</label>
-        <textarea class="form-control" id="Description" rows="3" name="Description">@Model.Description</textarea>
-    </div>
+<div class="card">
+    <form asp-action="Edit" method="post">
+        <input type="hidden" value="@Model.Id" name="Id" />
 
-    <button type="submit" class="btn btn-primary">Edit</button>
-    <a class="btn btn-outline-dark" asp-controller="Variant" asp-action="Index">Back</a>
-</form>
+        <div class="mb-3">
+            <label for="IdCategory" class="form-label">Id Category</label>
+            @Html.DropDownListFor(a => a.IdCategory, new SelectList(ViewBag.ListCategory, "Id", "NameCategory"), new {@class="form-control"})
+            @*        <input type="text" class="form-control" id="IdCategory" name="IdCategory" value="@Model.IdCategory">
+            *@
+        </div>
+        <div class="mb-3">
+            <label for="NameVariant" class="form-label">Name Variant</label>
+            <input type="text" class="form-control" id="NameVariant" name="NameVariant" value="@Model.NameVariant">
+        </div>
+        <div class="mb-3">
+            <label for="Description" class="form-label">Description</label>
+            <textarea class="form-control" id="Description" rows="3" name="Description">@Model.Description</textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Edit</button>
+        <button data-dismiss="modal" class="btn btn-primary">Cancel</button>
+
+    </form>
+</div>
