--- a/XPOS/XPOS_FE/Views/Shared/_Layout.cshtml
+++ b/XPOS/XPOS_FE/Views/Shared/_Layout.cshtml
@@ -10,6 +10,14 @@
 
     <!-- jQuery -->
     <script src="~/adminlte/plugins/jquery/jquery.min.js"></script>
+    <script src="~/adminlte/plugins/jquery-validation/jquery.validate.min.js"></script>
+    <script src="~/adminlte/plugins/jquery-validation/additional-methods.min.js"></script><!-- Toastr -->
+    
+    <!-- Toastr -->
+    <link rel="stylesheet" href="~/adminlte/plugins/toastr/toastr.min.css">
+    <script src="~/adminlte/plugins/toastr/toastr.min.js"></script>
+
+
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
@@ -92,9 +100,6 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
-
-
-
     @*<script src="~/lib/jquery/~/adminlte/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/~/adminlte/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
