--- a/XPOS/XPOS_FE/Views/Category/Create.cshtml
+++ b/XPOS/XPOS_FE/Views/Category/Create.cshtml
@@ -3,12 +3,12 @@
 
 
 <div class="card">
-    <form asp-action="Create" method="post">
+    <form asp-action="Create" method="post" id="form-create">
         <div class="mb-3">
             <label for="NameCategory" class="form-label">Name Category</label>
             <input type="text" class="form-control" id="NameCategory" name="NameCategory" value="@Model.NameCategory">
         </div>
-        <div class="mb-3" >
+        <div class="mb-3">
             <label for="Description" class="form-label">Description</label>
             <textarea class="form-control" id="Description" rows="3" name="Description">@Model.Description</textarea>
         </div>
@@ -19,3 +19,50 @@
         </div>
     </form>
 </div>
+
+<script>
+    $("#form-create").validate({
+        errorClass: "is-invalid text-danger",
+        rules: {
+            NameCategory: {
+                required: true,
+                minlength: 2
+            },
+            Description: "required"
+        },
+
+        messages: {
+            NameCategory: {
+                required: "Please enter name category",
+                minlength: "Name Category must consist of at leaast 2 character"
+            },
+            Description: "Please enter description"
+        },
+        submitHandler: function (form) {
+            var dataForm = $(form).serialize();
+
+            debugger
+            $.ajax({
+                url: "/Category/Create",
+                method: "post",
+                data: dataForm,
+                dataType: "json",
+                success: function (respon) {
+                    if (respon.dataRespon.success) {
+
+                        $("#modal-default").modal("hide")
+                        toastr.success(respon.dataRespon.message)
+                        setTimeout(function () {
+                            window.location.reload();
+                        }, 2000);
+                    }
+                    else {
+                        toastr.error(respon.dataRespon.message)
+                    }
+                }
+            })
+        }
+
+
+    })
+</script>
