--- a/XPOS/XPOS_FE/Views/Category/Edit.cshtml
+++ b/XPOS/XPOS_FE/Views/Category/Edit.cshtml
@@ -3,16 +3,16 @@
 
 
 <div class="card">
-    <form asp-action="Edit" method="post">
-        <input type="hidden" value="@Model.Id" name="Id"/>
+    <form asp-action="Edit" method="post" id="form-edit">
+        <input type="hidden" value="@Model.Id" name="Id" />
 
         <div class="mb-3">
             <label for="NameCategory" class="form-label">Name Category</label>
             <input type="text" class="form-control" id="NameCategory" name="NameCategory" value="@Model.NameCategory">
         </div>
         <div class="mb-3">
-            <label for="NameCategory" class="form-label">Description</label>
-            <textarea class="form-control" id="NameCategory" rows="3" name="Description">@Model.Description</textarea>
+            <label for="Descriptionn" class="form-label">Description</label>
+            <textarea class="form-control" id="Description" rows="3" name="Description">@Model.Description</textarea>
         </div>
 
         <div>
@@ -21,3 +21,49 @@
         </div>
     </form>
 </div>
+
+<script>
+    $("#form-edit").validate({
+        errorClass: "is-invalid text-danger",
+        rules: {
+            NameCategory: {
+                required: true,
+                minlength: 2
+            },
+            Description: "required"
+        },
+
+        messages: {
+            NameCategory: {
+                required: "Please enter name category",
+                minlength: "Name Category must consist of at leaast 2 character"
+            },
+            Description: "Please enter description"
+        },
+        submitHandler: function (form) {
+            var dataForm = $(form).serialize();
+
+            debugger
+            $.ajax({
+                url: "/Category/Edit",
+                method: "post",
+                data: dataForm,
+                dataType: "json",
+                success: function (respon) {
+                    if (respon.dataRespon.success) {
+
+                        $("#modal-default").modal("hide")
+                        toastr.success(respon.dataRespon.message)
+                        setTimeout(function () {
+                            window.location.reload();
+
+                        }, 2000);
+                    }
+                    else {
+                        toastr.error(respon.dataRespon.message)
+                    }
+                }
+            })
+        }
+    })
+</script>
