--- a/XPOS/XPOS_FE/Views/Product/Detail.cshtml
+++ b/XPOS/XPOS_FE/Views/Product/Detail.cshtml
@@ -3,41 +3,49 @@
 @model VMProduct
 
 <div class="card">
-    <div class="mb-3">
-        <label for="NameProduct" class="form-label">Name Product</label>
-        <input type="text" class="form-control" id="NameProduct" value="@Model.NameProduct" readonly>
-    </div>
-    <div class="mb-3">
-        <label for="NameVariant" class="form-label">Name Variant</label>
-        <input type="text" class="form-control" id="NameVariant" value="@Model.NameVariant" readonly>
-    </div>
-    <div class="mb-3">
-        <label for="NameCategory" class="form-label">Name Category</label>
-        <textarea class="form-control" id="NameCategory" rows="3" readonly>@Model.NameCategory</textarea>
-    </div>
-    <div class="mb-3">
-        <label for="Stock" class="form-label">Stock</label>
-        <textarea class="form-control" id="Stock" rows="3" readonly>@Model.Stock</textarea>
-    </div>
-    <div class="mb-3">
-        <label for="Price" class="form-label">Price</label>
-        <textarea class="form-control" id="Price" rows="3" readonly>@Model.Price</textarea>
-    </div>
-    <div class="mb-3">
-        <label for="CreateBy" class="form-label">Create By</label>
-        <input type="text" class="form-control" id="CreateBy" value="@Model.CreateBy" readonly>
-    </div>
-    <div class="mb-3">
-        <label for="CreateDate" class="form-label">Create Date</label>
-        <input type="text" class="form-control" id="CreateDate" value="@Model.CreateDate" readonly>
-    </div>
-    <div class="mb-3">
-        <label for="UpdateBy" class="form-label">Update By</label>
-        <input type="text" class="form-control" id="UpdateBy" value="@Model.UpdateBy" placeholder="" readonly>
-    </div>
-    <div class="mb-3">
-        <label for="UpdateDate" class="form-label">Update Date</label>
-        <input type="text" class="form-control" id="UpdateDate" value="@Model.UpdateDate" readonly>
+    <div class="row">
+        @*<div class="mb-3 col-6">
+        <label for="Image" class="form-label">Image</label>
+        <input type="file" class="form-control" id="Image" value="@Model.Image" readonly/>
+        </div>*@
+        <div class="col-6">
+            <div class="mb-3">
+                <label for="NameProduct" class="form-label">Name Product</label>
+                <input type="text" class="form-control" id="NameProduct" value="@Model.NameProduct" readonly>
+            </div>
+            <div class="mb-3">
+                <label for="NameVariant" class="form-label">Name Variant</label>
+                <input type="text" class="form-control" id="NameVariant" value="@Model.NameVariant" readonly>
+            </div>
+            <div class="mb-3">
+                <label for="NameCategory" class="form-label">Name Category</label>
+                <textarea class="form-control" id="NameCategory" rows="3" readonly>@Model.NameCategory</textarea>
+            </div>
+        </div>
+        <div class="mb-3 col-6">
+            <label for="Stock" class="form-label">Stock</label>
+            <textarea class="form-control" id="Stock" rows="3" readonly>@Model.Stock</textarea>
+        </div>
+        <div class="mb-3 col-6">
+            <label for="Price" class="form-label">Price</label>
+            <textarea class="form-control" id="Price" rows="3" readonly>@Model.Price</textarea>
+        </div>
+        <div class="mb-3 col-6">
+            <label for="CreateBy" class="form-label">Create By</label>
+            <input type="text" class="form-control" id="CreateBy" value="@Model.CreateBy" readonly>
+        </div>
+        <div class="mb-3 col-6">
+            <label for="CreateDate" class="form-label">Create Date</label>
+            <input type="text" class="form-control" id="CreateDate" value="@Model.CreateDate" readonly>
+        </div>
+        <div class="mb-3 col-6">
+            <label for="UpdateBy" class="form-label">Update By</label>
+            <input type="text" class="form-control" id="UpdateBy" value="@Model.UpdateBy" placeholder="" readonly>
+        </div>
+        <div class="mb-3 col-6">
+            <label for="UpdateDate" class="form-label">Update Date</label>
+            <input type="text" class="form-control" id="UpdateDate" value="@Model.UpdateDate" readonly>
+        </div>
     </div>
 </div>
 
