--- a/XPOS/XPOS_FE/Views/Product/Edit.cshtml
+++ b/XPOS/XPOS_FE/Views/Product/Edit.cshtml
@@ -3,40 +3,130 @@
 @model VMProduct;
 
 <div class="card">
-    <form asp-action="Edit" method="post">
+    <form asp-action="Edit" method="post" enctype="multipart/form-data" id="form-edit">
+        <div class="row">
 
-        <input type="hidden" value="@Model.Id" name="Id" />
+            <input type="hidden" value="@Model.Id" name="Id" />
+            <div class="col-6">
+                <div class="mb-3">
+                    <label for="NameProduct" class="form-label">Name Product</label>
+                    <input type="text" class="form-control" id="NameProduct" value="@Model.NameProduct" name="NameProduct" />
+                </div>
+                <div class="mb-3">
+                    <label for="IdCategory" class="form-label">Category</label>
+                    @Html.DropDownListFor(a => a.IdCategory, new SelectList(ViewBag.ListCategory, "Id","NameCategory"),
+                    "Select Category",
+                    new {@class="form-control"})
+                </div>
+                <div class="mb-3">
+                    <label for="IdVariant" class="form-label">Variant</label>
+                    @Html.DropDownListFor(a => a.IdVariant, new SelectList(ViewBag.ListVariant, "Id","NameVariant"),
+                    "Select Variant",
+                    new {@class="form-control"})
+                </div>
+            </div>
 
-        <div class="mb-3">
-            <label for="NameProduct" class="form-label">Name Product</label>
-            <input type="text" class="form-control" id="NameProduct" value="@Model.NameProduct" name="NameProduct" />
+            <div class="col-6">
+                <div class="mb-3">
+                    <label for="Stock" class="form-label">Stock</label>
+                    <input type="number" class="form-control" id="Stock" value="@Model.Stock" name="Stock" />
+                </div>
+                <div class="mb-3">
+                    <label for="Price" class="form-label">Price</label>
+                    <input type="number" class="form-control" id="Price" value="@Model.Price" name="Price" />
+                </div>
+                <div class="mb-3">
+                    <label for="ImageFile" class="form-label">Image</label>
+                    <input type="file" class="form-control" id="ImageFile" value="@Model.Image" name="ImageFile" />
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+            <button data-dismiss="modal" class="btn btn-light">Cancel</button>
         </div>
-        <div class="mb-3">
-            <label for="IdCategory" class="form-label">Category</label>
-            @Html.DropDownListFor(a => a.IdCategory, new SelectList(ViewBag.ListCategory, "Id","NameCategory"),
-            "Select Category",
-            new {@class="form-control"})
-        </div>
-        <div class="mb-3">
-            <label for="IdVariant" class="form-label">Variant</label>
-            @Html.DropDownListFor(a => a.IdVariant, new SelectList(ViewBag.ListVariant, "Id","NameVariant"),
-            "Select Variant",
-            new {@class="form-control"})
-        </div>
-        <div class="mb-3">
-            <label for="Stock" class="form-label">Stock</label>
-            <input type="number" class="form-control" id="Stock" value="@Model.Stock" name="Stock" />
-        </div>
-        <div class="mb-3">
-            <label for="Price" class="form-label">Price</label>
-            <input type="number" class="form-control" id="Price" value="@Model.Price" name="Price" />
-        </div>
-        <div class="mb-3">
-            <label for="Image" class="form-label">Image</label>
-            <input type="file" class="form-control" id="Image" value="@Model.Image" name="Image" />
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button data-dismiss="modal" class="btn btn-light">Cancel</button>
-
     </form>
 </div>
+
+<script>
+    $("#form-edit").validate({
+        errorClass: "is-invalid text-danger",
+
+        rules: {
+            NameProduct: {
+                required: true,
+                minlength: 2
+            },
+            IdCategory: "required",
+            IdVariant: "required",
+            Stock: {
+                required: true,
+                number: true
+            },
+            Price: {
+                required: true,
+                number: true
+            },
+            ImageFile: {
+                extension: "jpg|jpeg|png"
+            }
+        },
+
+        messages: {
+            NameProduct: {
+                required: "Please enter name product",
+                minlength: "Enter atleast 2 character"
+            },
+            IdCategory: "Please select category",
+            IdVariant: "Please select variant",
+            Stock: {
+                required: "Please input stock",
+                number: "Please input number only"
+            },
+            Price: {
+                required: "Please input price",
+                number: "Please input number only"
+            },
+            ImageFile: {
+                extension: "Please input file type jpg/jpeg/png"
+            }
+        },
+
+        submitHandler: function (form) {
+            var data = new FormData();
+            var dataForm = $(form).serializeArray();
+
+            $.each(dataForm, function (key, input) {
+                data.append(input.name, input.value)
+            })
+
+            var file = $("#ImageFile").prop("files")
+            if (file.length > 0) {
+                data.append("ImageFile", file[0])
+
+            }
+
+            $.ajax({
+                url: "/Product/Edit",
+                method: "post",
+                data: data,
+                dataType: "json",
+                contentType: false,
+                processData: false,
+                success: function (respon) {
+                    debugger
+                    if (respon.dataRespon.success) {
+
+                        $("#modal-xl").modal("hide")
+                        toastr.success(respon.dataRespon.message)
+                        setTimeout(function () {
+                            window.location.reload();
+
+                        }, 2000);
+                    }
+                    else {
+                        toastr.error(respon.dataRespon.message)
+                    }
+                }
+            })
+        }
+    })
+</script>
