--- a/XPOS/XPOS_FE/Views/Shared/_Layout.cshtml
+++ b/XPOS/XPOS_FE/Views/Shared/_Layout.cshtml
@@ -137,3 +137,9 @@
     <script src="~/adminlte/dist/js/pages/dashboard.js"></script>
 </body>
 </html>
+<style>
+    .img-responsive{
+        width: auto;
+        height: 200px !important;
+    }
+</style>
